spring-cloud-deployment/consumer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
  namespace: springboot-cloud
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: consumer
