spring-cloud-deployment/consumer/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: consumer
  namespace: springboot-cloud
spec:
  host: consumer.springboot-cloud.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: gray
    labels:
      version: gray
