spring-cloud-deployment/consumer/virtualservice-simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer-vs
  namespace: springboot-cloud
spec:
  hosts:
    - "*"
  gateways:
  - spring-gateway
  http:
  - name: consumer-v1
    match:
      - uri:
          prefix: "/consumer/"
    rewrite:
      uri: /
    route:
      - destination:
          host: consumer-v1.springboot-cloud.svc.cluster.local
          port:
            number: 8083
