spring-cloud-deployment/consumer/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer-vs
  namespace: springboot-cloud
spec:
  hosts:
    - "*"
  gateways:
  - spring-gateway
  http:
  - name: canary
    match:
    - uri:
        prefix: "/consumer/"
      headers:
        x-am-canary:
          exact: "1"
    rewrite:
      uri: /
    route:
    - destination:
        host: consumer.springboot-cloud.svc.cluster.local
        port:
          number: 8083
        subset: gray
  - name: base
    match:
      - uri:
          prefix: "/consumer/"
        headers:
          x-am-canary:
            exact: "0"
    rewrite:
      uri: /
    route:
    - destination:
        host: consumer.springboot-cloud.svc.cluster.local
        port:
          number: 8083
        subset: v1
  - name: default
    match:
      - uri:
          prefix: "/consumer/"
    rewrite:
      uri: /
    route:
      - destination:
          host: consumer.springboot-cloud.svc.cluster.local
          port:
            number: 8083
          subset: v1
